tests/baselines/reference/propertyOverridesAccessors4(target=es2015).errors.txt
propertyOverridesAccessors4.ts(6,5): error TS2610: 'sound' is defined as an accessor in class 'Animal', but is overridden here in 'Lion' as an instance property.


==== propertyOverridesAccessors4.ts (1 errors) ====
    declare class Animal {
        get sound(): string
        set sound(val: string)
    }
    class Lion extends Animal {
        sound = 'RAWR!' // error here
        ~~~~~
!!! error TS2610: 'sound' is defined as an accessor in class 'Animal', but is overridden here in 'Lion' as an instance property.
    }
    